syntax = "proto3";
option go_package = "/gen";

service AuthService {
  rpc Authenticate(AuthenticateRequest) returns (AuthenticateResponse);
  rpc UpdateUsernameEmail(UpdateUsernameEmailRequest) returns (UpdateUsernameEmailResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}

message AuthenticateRequest {
  string auth_token = 1;
}

message AuthenticateResponse {
  uint64 user_id = 1;
}

message UpdateUsernameEmailRequest {
  uint64 user_id = 1;
  string username = 2;
  string email = 3;
}

message UpdateUsernameEmailResponse {
  bool success = 1;
}

message DeleteUserRequest {
  uint64 user_id = 1;
}

message DeleteUserResponse {
  bool success = 1;
}