syntax = "proto3";
option go_package = "/gen";

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc UserInfo(UserInfoRequest) returns (UserInfoResponse);
}

message CreateUserRequest {
  uint64 user_id = 1;
  string username = 2;
  string email = 3;
  uint64 role = 4;
}

message CreateUserResponse {
  uint64 user_id = 1;
}

message UserInfoRequest {
  uint64 user_id = 1;
}

message UserInfoResponse {
  uint64 user_id = 1;
  uint64 role = 4;
  bool banned = 5;
  string banReason = 6;
  string banExpiredAt = 7;
}